sensitivity calc functionality and ux cleanup. Pressing enter now jumps to next input, covnerted sensitivity now updates correctly, eDPI and cm/360 update if user inputs dpi. Calculator saved state stays persistant if you close card.

--- a/src/components/CardButton/CardButton.css
+++ b/src/components/CardButton/CardButton.css
@@ -7,7 +7,6 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.15);
-  backdrop-filter: blur(1px);
   z-index: 1;
 }
 
