--- a/src/global.css
+++ b/src/global.css
@@ -67,14 +67,14 @@ h1 {
 
 h2 {
   margin: 0 0 var(--spacing) 0;
-  color: var(--primary);
+  color: currentColor;
   letter-spacing: 0.5px;
   font-weight: normal;
 }
 
 h3 {
   margin: 0 0 var(--spacing) 0;
-  color: var(--primary);
+  color: currentColor;
   letter-spacing: 0.5px;
   font-weight: normal;
   font-size: 1.3em;
@@ -104,7 +104,7 @@ p {
 }
 
 b {
-  color: var(--primary);
+  color: currentColor;
 }
 
 a,
@@ -138,14 +138,14 @@ label {
 
   &:before {
     content: '';
-    position: absolute;
+    position: absokjlute;
     pointer-events: none;
     top: 50%;
     transform: translateY(-50%);
     right: calc(1.75 * var(--spacing));
     width: calc(2.25 * var(--spacing));
     height: calc(2.25 * var(--spacing));
-    background-color: var(--primary);
+    background-color: currentColor;
     -webkit-mask-image: url('./assets/svg/chevron-down.svg');
     -webkit-mask-repeat: no-repeat;
     -webkit-mask-position: center;
@@ -178,14 +178,15 @@ input::placeholder {
 select:focus,
 input:focus {
   outline: none;
-  border-color: var(--primary);
+  border-color: currentColor;
   background-color: var(--dark);
-  box-shadow: inset 0 0 0 1px var(--primary);
+  box-shadow: inset 0 0 0 1px currentColor;
 }
 
 select option {
   background-color: var(--dark);
-  color: var(--light);
+  color: currentColor;
+  opacity: 0.8;
 }
 
 /* Buttons */
@@ -196,8 +197,8 @@ button, button:hover, button:focus, button:focus-visible {
 button {
   padding: calc(0.25 * var(--spacing)) calc(0.5 * var(--spacing));
   background: var(--dark);
-  color: var(--primary);
-  border: 1px solid var(--primary);
+  color: currentColor;
+  border: 1px solid currentColor;
   border-radius: calc(2 * var(--radius));
   font-weight: normal;
   cursor: pointer;
@@ -212,7 +213,7 @@ button {
 }
 
 button:hover {
-  background: var(--primary);
+  background: currentColor;
   color: var(--dark);
   box-shadow: none;
 }
@@ -227,9 +228,9 @@ button:disabled {
 }
 
 .btn-primary {
-  background: var(--primary);
+  background: currentColor;
   color: var(--dark);
-  border: 2px solid var(--primary);
+  border: 2px solid currentColor;
 }
 
 .btn-primary:hover {
@@ -254,13 +255,12 @@ button:disabled {
   border: 1px solid currentColor;
 }
 .btn-outline:hover {
-  background: var(--dark);
-  color: var(--primary);
+  box-shadow: inset 0 0 0 1px currentColor;
 }
 
 /* My Sens */
 .my-sens {
-  background-color: var(--primary);
+  background-color: currentColor;
   mask: center center no-repeat;
   transition: background-color 0.3s ease-in-out;
   position: relative;
@@ -291,7 +291,7 @@ button:disabled {
 
 .message.success {
   background: var(--dark);
-  color: var(--primary);
+  color: currentColor;
 }
 
 .message.error {
